# GPc

./: .gitignore  CClctrl.h  CDataModel.h  CDist.cpp  CDist.h  CGp.cpp  CGp.h  CGplvm.cpp  CGplvm.h  CGplvm.txt  CIvm.cpp  CIvm.h  CKern.cpp  CKern.h  CMakeLists.txt  CMatlab.h  CMatlab.txt  CMatrix.cpp  CMatrix.h  CMatrix.txt  CMltools.h  CMltools.txt  CNdlInterfaces.h  CNoise.cpp  CNoise.h  COptimisable.h  CPpa.h  CPpa.txt  CTransform.cpp  CTransform.h  LICENSE  README.md  gp.cpp  gp.h  gplvm.cpp  gplvm.h  gplvm.txt  index.html  ivm.cpp  ivm.h  (+18 more)
examples/: ard_gaussian_clusters.svml  oilTrain.svml  oilTrain100.svml  semisupercrescent.svml  semisupercrescent_labelled.svml  sinc.svml  spgp1d.svml  unitsquaregp.svml
gpapp/: make.fc6  make.inc  make.linux  make.osx  makefile
gplvmapp/: make.atlas  make.inc  makefile
ivmapp/: make.cygwin  makefile
matfiles/: biasKernTest.mat  choleskyMatrixTest.mat  cmpndKernTest.mat  cumGaussianNdlutilTest.mat  cumGaussianTest.mat  digammaNdlutilTest.mat  digammaTest.mat  gammaDistTest.mat  gammaNdlutilTest.mat  gammaTest.mat  gaussOverDiffCumGaussianNdlutilTest.mat  gaussOverDiffCumGaussianTest.mat  gemvMatrixTest.mat  gerMatrixTest.mat  invSigmoidTest.mat  linKernTest.mat  linardKernTest.mat  lnCumGaussianTest.mat  matern32KernTest.mat  mlpKernTest.mat  ngaussNoiseTest.mat  ngaussianTest.mat  normMatrixTest.mat  rbfKernTest.mat  sigmoidTest.mat  syevMatrixTest.mat  syrMatrixTest.mat  sysvMatrixTest.mat  tensorKernTest.mat  testDot.mat  testGp.mat  testGpdtc.mat  testGpfitc.mat  testIvmNcnm.mat  testMltoolsmlp.mat  testNcnm.mat  testProbit.mat  testSyev.mat  trsmMatrixTest.mat
mex/: compile.m  fGP.mex.cpp  test.m
src/: CGplvm.cpp  CGplvm.h  CMatrix.cpp  CPpa.cpp  gp.cpp  gp.h  ivm.cpp
test/: make.cygwin  make.fc6  make.linux  makefile  testDist.cpp  testIvm.cpp  testTransform.cpp
test/matfiles/: axpyMatrixTest.mat  cmpndNoiseTest.mat  dotMatrixTest.mat  erfcinvNdlutilTest.mat  (+54 more)
